--- a/stile.sass
+++ b/stile.sass
@@ -191,12 +191,12 @@ textarea
 @media only screen and (max-width: 1024px) 
 
 p 
-  font-size: $font-size-tablet
+  font-size: $font-size
   line-height: $line-height
   color: $dark-text
 
 h1
-  font-size: $font-size-tablet * 2.5
+  font-size: $font-size * 2.5
   letter-spacing: $font-size / 10
 
 h2
